# bash-template

./: .ignore  .pre-commit-config.yaml  .shellcheckrc  README.md  pyproject.toml  template.sh  template_standalone.sh
test/: alerts.bats  arrays.bats  checks.bats  cust.bats  dates.bats  debug.bats  files.bats  misc.bats  strings.bats  template.bats  template_standalone.bats  template_utils.bats
utilities/: alerts.bash  arrays.bash  checks.bash  cust.bash  dates.bash  files.bash  macOS.bash  misc.bash  services.bash  strings.bash  template_utils.bash
