[tool.poetry]
    authors     = ["Nathaniel Landau <nate@natelandau.com>"]
    description = "Bash Template"
    homepage    = "https://github.com/ShangjinTang/bash-template"
    license     = "MIT"
    name        = "bash-template"
    readme      = "README.md"
    repository  = "https://github.com/ShangjinTang/bash-template"
    version     = "0.1.0"

    [tool.poetry.dependencies]
        python     = "^3.12"
        commitizen = "^3.29.0"
        poethepoet = "^0.29.0"
        pre-commit = "^3.8.0"
        typos      = "^1.24.6"
        yamllint   = "^1.35.1"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]

[tool.commitizen]
    bump_message             = "bump(release): v$current_version → v$new_version"
    tag_format               = "v$version"
    update_changelog_on_bump = true
    version                  = "0.1.0"
    version_files            = ["pyproject.toml:version"]

[tool.poe.tasks]

    [tool.poe.tasks.lint]
        help = "Lint this package"

        [[tool.poe.tasks.lint.sequence]]
            shell = "poetry check"

        [[tool.poe.tasks.lint.sequence]]
            shell = "typos"

        [[tool.poe.tasks.lint.sequence]]
            shell = "yamllint ."

            # [[tool.poe.tasks.lint.sequence]]
            #     shell = "shellcheck bin-*/*"

        [[tool.poe.tasks.lint.sequence]]
            shell = "pre-commit run --all-files"
